--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 </head>
 <body>
   <div class="row">
-    <div class="card green"></div>
-    <div class="card blue"></div>
-    <div class="card yellow"></div>
-    <div class="card orange"></div>
+    <div class="card green color-hidden" 
+    onclick="onCardClicked(event)"></div>
+    <div class="card blue color-hidden"></div>
+    <div class="card yellow color-hidden"></div>
+    <div class="card orange color-hidden"></div>
   </div>
   <div class="row">
-    <div class="card pink"></div>
-    <div class="card green"></div>
-    <div class="card orange"></div>
-    <div class="card purple"></div>
+    <div class="card pink color-hidden"></div>
+    <div class="card green color-hidden"></div>
+    <div class="card orange color-hidden"></div>
+    <div class="card purple color-hidden"></div>
   </div>
   <div class="row">
-    <div class="card pink"></div>
-    <div class="card blue"></div>
-    <div class="card yellow"></div>
-    <div class="card purple"></div>
+    <div class="card pink color-hidden"></div>
+    <div class="card blue color-hidden"></div>
+    <div class="card yellow color-hidden"></div>
+    <div class="card purple color-hidden"></div>
   </div>
 
   <script defer src="script.js"></script>
