--- a/index.html
+++ b/index.html
@@ -11,21 +11,32 @@
   <div class="row">
     <div class="card green color-hidden" 
     onclick="onCardClicked(event)"></div>
-    <div class="card blue color-hidden"></div>
-    <div class="card yellow color-hidden"></div>
-    <div class="card orange color-hidden"></div>
+    <div class="card blue color-hidden" 
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card yellow color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card orange color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
   </div>
   <div class="row">
-    <div class="card pink color-hidden"></div>
-    <div class="card green color-hidden"></div>
-    <div class="card orange color-hidden"></div>
-    <div class="card purple color-hidden"></div>
+    <div class="card pink color-hidden" 
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card green color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card orange color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card purple color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
   </div>
   <div class="row">
-    <div class="card pink color-hidden"></div>
-    <div class="card blue color-hidden"></div>
-    <div class="card yellow color-hidden"></div>
-    <div class="card purple color-hidden"></div>
+    <div class="card pink color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card blue color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card yellow color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
+    <div class="card purple color-hidden"
+    onclick="onCardClicked(event)"></div>></div>
   </div>
 
   <script defer src="script.js"></script>
