--- a/index.html
+++ b/index.html
@@ -8,35 +8,60 @@
 
 </head>
 <body>
+  <h1 class="title">MatchUp</h1>
   <div class="row">
-    <div class="card green color-hidden" 
-    onclick="onCardClicked(event)"></div>
-    <div class="card blue color-hidden" 
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card yellow color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card orange color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
+    <div 
+    color="green"
+    id="green1"
+    class="card green color-hidden"></div>
+    <div 
+    color="blue"
+    id="blue1"
+    class="card blue color-hidden"></div>
+    <div 
+    color="yellow"
+    id="yellow1"
+    class="card yellow color-hidden"></div>
+    <div 
+    color="orange"
+    id="orange1"
+    class="card orange color-hidden"></div>
   </div>
   <div class="row">
-    <div class="card pink color-hidden" 
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card green color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card orange color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card purple color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
+    <div 
+    color="white"
+    id="white1"
+    class="card white color-hidden"></div>
+    <div 
+    color="green"
+    id="green2"
+    class="card green color-hidden"></div>
+    <div 
+    color="orange"
+    id="orange2"
+    class="card orange color-hidden"></div>
+    <div 
+    color="purple"
+    id="purple1"
+    class="card purple color-hidden"></div>
   </div>
   <div class="row">
-    <div class="card pink color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card blue color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card yellow color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
-    <div class="card purple color-hidden"
-    onclick="onCardClicked(event)"></div>></div>
+    <div 
+    color="white"
+    id="white2"
+    class="card white color-hidden"></div>
+    <div 
+    color="blue"
+    id="blue2"
+    class="card blue color-hidden"></div>
+    <div 
+    color="yellow"
+    id="yellow2"
+    class="card yellow color-hidden"></div>
+    <div 
+    color="purple"
+    id="purple2"
+    class="card purple color-hidden"></div>
   </div>
 
   <script defer src="script.js"></script>
