--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory Game</title>
@@ -8,7 +11,11 @@
 
 </head>
 <body>
-  <h1 class="title">MatchUp</h1>
+  <div class="container">
+    <div class="image-container">
+      <img src="https://lh3.googleusercontent.com/pw/ABLVV84y9cwdMfXWod_M5YpHW8WAVhFKOhX14S7BdnU8kopgQFmvhYKlLSt8956Ga6xMAK1M-Q3D9dUFdDFPiRXZo5CIGsQxH9y54rWS35BnyTqcrTfLyA=w2400" alt="Image" class="centered-image">
+    </div>
+
   <div class="row">
     <div 
     color="green"
