--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,13 @@
   <link href="style2.css" rel="stylesheet">
 </head>
 <body>
+  <div class="white-container">
   <div class="centered-text">
-  <h1 class="titletwo">YOU WIN!</h1>
   <button id="play">PLAY AGAIN?</button>
 </div>
+</div>
+
+
   <script defer src="script.js"></script>
   
 </body>
